# Test

./: .gitignore  README.md
AIDLTest/: README.md  build.gradle  settings.gradle
AIDLTest/app/: build.gradle
AIDLTest/app/src/main/: AndroidManifest.xml
AIDLTest/commonlib/: build.gradle
AIDLTest/commonlib/src/main/: AndroidManifest.xml
AIDLTest/remote/: build.gradle
AIDLTest/remote/src/main/: AndroidManifest.xml
AudioEdit/: .gitignore  README.md  build.gradle
AudioEdit/app/: build.gradle
AudioEdit/app/src/main/: AndroidManifest.xml
CompileAnnotation/: README.md  build.gradle  settings.gradle
CompileAnnotation/annotations/: build.gradle
CompileAnnotation/app/: build.gradle
CompileAnnotation/app/src/main/: AndroidManifest.xml
CompileAnnotation/bind_lib/: build.gradle
CompileAnnotation/bind_lib/src/main/: AndroidManifest.xml
CompileAnnotation/compile/: build.gradle
Download/: README.md
Download/app/: build.gradle
Download/app/src/main/: AndroidManifest.xml
FFmpegTest/: README.md  build.gradle
FFmpegTest/app/: .gitignore  CMakeLists.txt  build.gradle
FFmpegTest/app/src/androidTest/java/com/pinery/test/: ExampleInstrumentedTest.java
FFmpegTest/app/src/main/: AndroidManifest.xml
FFmpegTest/app/src/main/cpp/: native-lib.cpp  zp_decode.c
FFmpegTest/app/src/main/cpp/include/libavutil/: ffversion.h
FFmpegTest/app/src/main/java/com/pinery/test/: App.java  MainActivity.java  MainFragment.java  VideoUtil.java
FFmpegTest/app/src/main/java/com/pinery/test/util/: FileUtils.java  LogUtil.java  TaskManager.java  ToastUtil.java
FFmpegTest/app/src/main/res/layout/: activity_main.xml  fragment_main.xml
FFmpegTest/app/src/main/res/values/: strings.xml
FFmpegTest/app/src/test/java/com/pinery/test/: ExampleUnitTest.java
JNITest/: build.gradle
JNITest/app/: build.gradle
JNITest/app/src/main/: AndroidManifest.xml
JavaTest/: README.md
JavaTest/test/: build.gradle
Lottery/: README.md  build.gradle
Lottery/app/: build.gradle
Lottery/app/src/main/: AndroidManifest.xml
MVVMTest/: README.md  build.gradle
MVVMTest/app/: build.gradle
MemoryAnalyzeTest/: README.md  build.gradle
MemoryAnalyzeTest/app/: build.gradle
Ripple/: README.md
Ripple/app/: build.gradle
(+237 files in other folders)
